force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/ArdiraSurvey__Answer_Choice__c.object-meta.xml
<CustomObject>
    <description>This object stores information about question choices.</description>
    <label>Ardira Answer Choice</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>Answer Choice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Answer Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>