force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Attachment_Required__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Attachment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, attachment has to be uploaded if this answer choice is selected.</description>
    <inlineHelpText>Enable to make an attachment upload mandatory when this answer choice is selected.</inlineHelpText>
    <label>Attachment Mandatory</label>
    <type>Checkbox</type>
</CustomField>