force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Choice_Image__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Choice_Image__c</fullName>
    <description>Image to be displayed as a choice.</description>
    <inlineHelpText>Image to be displayed with the answer choice.</inlineHelpText>
    <label>Choice Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>