force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Choice_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Choice_Image_URL__c</fullName>
    <description>URL of the image to be displayed as a choice.</description>
    <inlineHelpText>URL of the image to be displayed with the answer choice.</inlineHelpText>
    <label>Choice Image URL</label>
    <type>Url</type>
</CustomField>