force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Choice_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Choice_Label__c</fullName>
    <description>Text representing the choice.</description>
    <inlineHelpText>Choice label to display.</inlineHelpText>
    <label>Choice Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>