force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Choice_Label_Long__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Choice_Label_Long__c</fullName>
    <description>Choice label to display.</description>
    <inlineHelpText>Choice label to display.</inlineHelpText>
    <label>Choice Label Long</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>