force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Choice_Value__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Choice_Value__c</fullName>
    <description>Specify internal choice value to use for reporting other purpose.</description>
    <inlineHelpText>Specify internal choice value to use for reporting and other purpose.</inlineHelpText>
    <label>Choice Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>