force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Comment_Required__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Comment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, comment is required if this choice is selected.</description>
    <inlineHelpText>Enable to make comment mandatory when this answer choice is selected.</inlineHelpText>
    <label>Comment Mandatory</label>
    <type>Checkbox</type>
</CustomField>