force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Correct_Choice__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Correct_Choice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this choice is the correct answer choice for the question.</description>
    <inlineHelpText>If checked, this choice is the correct answer choice for the question.</inlineHelpText>
    <label>Correct Choice</label>
    <type>Checkbox</type>
</CustomField>