force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Default_Choice__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Default_Choice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this answer choice is used as the default response for the question.</description>
    <inlineHelpText>Enable to use this answer choice as the default response for the question.</inlineHelpText>
    <label>Default Choice</label>
    <type>Checkbox</type>
</CustomField>