force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Display_Order__c</fullName>
    <description>Order in which this choice is displayed for a question. A typical value will be a three character text representing a number e.g. 005.</description>
    <inlineHelpText>Display sort order for the choice. A typical value will be a three character text representing a number e.g. 001, 005.</inlineHelpText>
    <label>Display Order</label>
    <length>32</length>
    <type>Text</type>
</CustomField>