force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question__c</fullName>
    <description>Answer Choice is used by this question.</description>
    <inlineHelpText>Answer Choice is used by this question.</inlineHelpText>
    <label>Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Answer Choices</relationshipLabel>
    <relationshipName>Answer_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>