force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Score__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score__c</fullName>
    <description>Score assigned if this answer choice is selected.</description>
    <inlineHelpText>Score value to use when this answer choice is selected.</inlineHelpText>
    <label>Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>