force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__Show_Text_Box__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Text_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show text box when this option is selected.</description>
    <inlineHelpText>When enabled, shows a text box for additional value.</inlineHelpText>
    <label>Show Text Box</label>
    <type>Checkbox</type>
</CustomField>