force-app/main/default/objects/ArdiraSurvey__Answer_Choice__c/fields/ArdiraSurvey__System_Option__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__System_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this choice was implicitly created by the system.</description>
    <inlineHelpText>Indicates that this choice was implicitly created by the system.</inlineHelpText>
    <label>System Option</label>
    <type>Checkbox</type>
</CustomField>